--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ dependencies {
     implementation 'org.codehaus.groovy:groovy-all:2.5.7'
 
     implementation 'com.sparkjava:spark-core:2.8.0'
+    implementation 'com.google.inject:guice:4.2.2'
 
     testImplementation 'org.spockframework:spock-core:1.3-groovy-2.5'
 }
