--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ dependencies {
 
     implementation 'com.sparkjava:spark-core:2.8.0'
     implementation 'com.google.inject:guice:4.2.2'
+    implementation 'com.google.code.gson:gson:2.8.6'
 
     testImplementation 'org.spockframework:spock-core:1.3-groovy-2.5'
 }
