--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,8 @@ dependencies {
     implementation 'com.sparkjava:spark-core:2.8.0'
     implementation 'com.google.inject:guice:4.2.2'
     implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'org.mybatis:mybatis:3.5.3'
+    implementation 'postgresql:postgresql:9.1-901.jdbc4'
 
     testImplementation 'org.spockframework:spock-core:1.3-groovy-2.5'
 }
