--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ dependencies {
     implementation 'com.google.inject:guice:4.2.2'
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'org.mybatis:mybatis:3.5.3'
+    implementation 'org.mybatis:mybatis-guice:3.10'
     implementation 'postgresql:postgresql:9.1-901.jdbc4'
 
     testImplementation 'org.spockframework:spock-core:1.3-groovy-2.5'
